--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -171,3 +171,13 @@
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
     state: nf_poster15_contraband
+
+- type: entity
+  parent: PosterBase
+  id: NFPosterContrabandRubicon
+  name: "Far Star Biotech Rubicon"
+  description: "The Far Star Biotech Rubicon Class Expeditionary Station! Here to take you on your journey to the other side, every time."
+  components:
+  - type: Sprite
+    sprite: _NF/Structures/Wallmounts/posters.rsi
+    state: nf_poster16_contraband
