Saline and blood system changes

--- a/Resources/Prototypes/Reagents/medicine.yml
+++ b/Resources/Prototypes/Reagents/medicine.yml
@@ -661,9 +661,9 @@
     Drink:
       effects:
         - !type:SatiateThirst
-          factor: 6
+          factor: -2 # Frontier
         - !type:ModifyBloodLevel
-          amount: 6
+          amount: 2 # Frontier
 
 - type: reagent
   id: Siderlac
