--- a/Resources/Prototypes/Recipes/Reactions/medicine.yml
+++ b/Resources/Prototypes/Recipes/Reactions/medicine.yml
@@ -351,7 +351,7 @@
   reactants:
     TableSalt:
       amount: 1
-    Blood:
+    TreatedBlood: #Frontier
       amount: 1
     Hydroxide:
       amount: 2
@@ -575,7 +575,7 @@
   impact: Medium
   minTemp: 370
   reactants:
-    Blood:
+    TreatedBlood: #Frontier
       amount: 3
     Omnizine:
       amount: 1
