--- a/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
+++ b/Resources/Prototypes/_NF/Recipes/Cooking/medical_recipes.yml
@@ -1,4 +1,17 @@
-  #pen recycling recipes
+# topical crafting recipes
+
+- type: microwaveMealRecipe
+  id: RecipeUniversalBloodpack
+  name: sterilize and reset pen
+  result: Bloodpack
+  time: 10
+  solids:
+    SheetPlastic1: 1
+  reagents:
+    BloodPlasma: 30
+  recipeType: MedicalAssembler # Frontier
+
+#pen recycling recipes
 
 - type: microwaveMealRecipe
   id: RecipeCleanEmergencyMedipen
