--- a/Resources/Prototypes/_NF/Recipes/Reactions/chemicals.yml
+++ b/Resources/Prototypes/_NF/Recipes/Reactions/chemicals.yml
@@ -13,3 +13,80 @@
       amount: 1
   products:
     SalicylicAcid: 3
+
+- type: reaction
+  id: TreatBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    Blood:
+      amount: 1
+  products:
+    TreatedBlood: 1
+
+- type: reaction
+  id: TreatInsectBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    InsectBlood:
+      amount: 1
+  products:
+    TreatedBlood: 1
+
+- type: reaction
+  id: TreatSlimeBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    Slime:
+      amount: 1
+  products:
+    TreatedBlood: 1
+
+- type: reaction
+  id: TreatSapBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    Sap:
+      amount: 1
+  products:
+    TreatedBlood: 1
+
+- type: reaction
+  id: TreatCopperBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    CopperBlood:
+      amount: 1
+  products:
+    TreatedBlood: 1
+
+- type: reaction
+  id: TreatAmmoniaBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    AmmoniaBlood:
+      amount: 1
+  products:
+    TreatedBlood: 1
+
+- type: reaction
+  id: TreatGoblinBlood
+  source: true
+  requiredMixerCategories:
+  - Electrolysis
+  reactants:
+    GoblinBlood:
+      amount: 1
+  products:
+    TreatedBlood: 1
