--- a/Resources/Prototypes/_NF/Recipes/Reactions/medicine.yml
+++ b/Resources/Prototypes/_NF/Recipes/Reactions/medicine.yml
@@ -36,3 +36,13 @@
       amount: 1
   products:
     Opporozidone: 3
+
+- type: reaction
+  id: BloodPlasma
+  reactants:
+    TreatedBlood:
+      amount: 1
+    Tricordrazine:
+      amount: 1
+  products:
+    BloodPlasma: 2
