--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -1201,6 +1201,7 @@
     runningState: building
     unlitIdleState: unshaded
     unlitRunningState: building-unshaded
+    defaultProductionAmount: 10
     staticRecipes:
     - SmeltScrap
     - ScrapPartRodMetal1
@@ -1224,24 +1225,6 @@
     - ScrapSheetClockworkGlass1
     - ScrapMaterialBluespace1
     - ScrapMaterialDiamond1
-    - ScrapPartRodMetal30
-    - ScrapSheetSteel30
-    - ScrapSheetGlass30
-    - ScrapSheetBrass30
-    - ScrapSheetRGlass30
-    - ScrapSheetPlasteel30
-    - ScrapSheetPlastic30
-    - ScrapSheetPlasma30
-    - ScrapSheetUranium30
-    - ScrapIngotSilver30
-    - ScrapIngotGold30
-    - ScrapMaterialBananium30
-    - ScrapMaterialCloth30
-    - ScrapMaterialDurathread30
-    - ScrapSheetUGlass30
-    - ScrapSheetPGlass30
-    - ScrapSheetRUGlass30
-    - ScrapSheetRPGlass30
-    - ScrapSheetClockworkGlass30
-    - ScrapMaterialBluespace30
-    - ScrapMaterialDiamond30
+    - ScrapCableHVStack1
+    - ScrapCableMVStack1
+    - ScrapCableApcStack1
