--- a/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
+++ b/Resources/Prototypes/_NF/Recipes/Lathes/sheet.yml
@@ -73,19 +73,32 @@
 # Final price is rounded up to the nearest even number multiple of 100
 
 - type: latheRecipe
+  id: ScrapCableHVStack1
+  result: CableHVStack1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 300 # ~0.3 of steel sheet
+
+- type: latheRecipe
+  id: ScrapCableMVStack1
+  result: CableMVStack1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 300 # ~0.3 of steel sheet
+
+- type: latheRecipe
+  id: ScrapCableApcStack1
+  result: CableApcStack1
+  parent: BaseMaterialsNoDiscountRecipe
+  materials:
+    RawScrap: 300 # ~0.3 of steel sheet
+
+- type: latheRecipe
   id: ScrapPartRodMetal1
   result: PartRodMetal1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 500 # ~0.5 of steel sheet
-
-- type: latheRecipe
-  id: ScrapPartRodMetal30
-  result: PartRodMetal
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 15000 # ~0.5 of full steel sheet stack
 
 - type: latheRecipe
   id: ScrapSheetSteel1
@@ -95,27 +108,11 @@
     RawScrap: 900
 
 - type: latheRecipe
-  id: ScrapSheetSteel30
-  result: SheetSteel
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 27000
-
-- type: latheRecipe
   id: ScrapSheetGlass1
   result: SheetGlass1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 1200
-
-- type: latheRecipe
-  id: ScrapSheetGlass30
-  result: SheetGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 36000
 
 - type: latheRecipe
   id: ScrapSheetBrass1
@@ -125,27 +122,11 @@
     RawScrap: 1500
 
 - type: latheRecipe
-  id: ScrapSheetBrass30
-  result: SheetBrass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 45000
-
-- type: latheRecipe
   id: ScrapSheetRGlass1
   result: SheetRGlass1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 1300
-
-- type: latheRecipe
-  id: ScrapSheetRGlass30
-  result: SheetRGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 39000
 
 - type: latheRecipe
   id: ScrapSheetPlasteel1
@@ -155,27 +136,11 @@
     RawScrap: 4000
 
 - type: latheRecipe
-  id: ScrapSheetPlasteel30
-  result: SheetPlasteel
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 120000
-
-- type: latheRecipe
   id: ScrapSheetPlastic1
   result: SheetPlastic1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 1500
-
-- type: latheRecipe
-  id: ScrapSheetPlastic30
-  result: SheetPlastic
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 45000
 
 - type: latheRecipe
   id: ScrapSheetPlasma1
@@ -185,27 +150,11 @@
     RawScrap: 3000
 
 - type: latheRecipe
-  id: ScrapSheetPlasma30
-  result: SheetPlasma
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 90000
-
-- type: latheRecipe
   id: ScrapSheetUranium1
   result: SheetUranium1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 3000
-
-- type: latheRecipe
-  id: ScrapSheetUranium30
-  result: SheetUranium
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 90000
 
 - type: latheRecipe
   id: ScrapIngotSilver1
@@ -215,27 +164,11 @@
     RawScrap: 2300
 
 - type: latheRecipe
-  id: ScrapIngotSilver30
-  result: IngotSilver
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 69000
-
-- type: latheRecipe
   id: ScrapIngotGold1
   result: IngotGold1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 3000
-
-- type: latheRecipe
-  id: ScrapIngotGold30
-  result: IngotGold
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 90000
 
 - type: latheRecipe
   id: ScrapMaterialBananium1
@@ -245,27 +178,11 @@
     RawScrap: 6500
 
 - type: latheRecipe
-  id: ScrapMaterialBananium30
-  result: MaterialBananium
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 195000
-
-- type: latheRecipe
   id: ScrapMaterialCloth1
   result: MaterialCloth1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 800
-
-- type: latheRecipe
-  id: ScrapMaterialCloth30
-  result: MaterialCloth
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 24000
 
 - type: latheRecipe
   id: ScrapMaterialDurathread1
@@ -275,27 +192,11 @@
     RawScrap: 2300
 
 - type: latheRecipe
-  id: ScrapMaterialDurathread30
-  result: MaterialDurathread
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 69000
-
-- type: latheRecipe
   id: ScrapSheetUGlass1
   result: SheetUGlass1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 3300
-
-- type: latheRecipe
-  id: ScrapSheetUGlass30
-  result: SheetUGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 99000
 
 - type: latheRecipe
   id: ScrapSheetPGlass1
@@ -305,27 +206,11 @@
     RawScrap: 3300
 
 - type: latheRecipe
-  id: ScrapSheetPGlass30
-  result: SheetPGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 99000
-
-- type: latheRecipe
   id: ScrapSheetRUGlass1
   result: SheetRUGlass1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 3700
-
-- type: latheRecipe
-  id: ScrapSheetRUGlass30
-  result: SheetRUGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 111000
 
 - type: latheRecipe
   id: ScrapSheetRPGlass1
@@ -335,27 +220,11 @@
     RawScrap: 3700
 
 - type: latheRecipe
-  id: ScrapSheetRPGlass30
-  result: SheetRPGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 111000
-
-- type: latheRecipe
   id: ScrapSheetClockworkGlass1
   result: SheetClockworkGlass1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 1400
-
-- type: latheRecipe
-  id: ScrapSheetClockworkGlass30
-  result: SheetClockworkGlass
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 42000
 
 - type: latheRecipe
   id: ScrapMaterialBluespace1
@@ -365,24 +234,8 @@
     RawScrap: 225000
 
 - type: latheRecipe
-  id: ScrapMaterialBluespace30
-  result: MaterialBluespace
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 6750000 # dear god
-
-- type: latheRecipe
   id: ScrapMaterialDiamond1
   result: MaterialDiamond1
   parent: BaseMaterialsNoDiscountRecipe
   materials:
     RawScrap: 300000
-
-- type: latheRecipe
-  id: ScrapMaterialDiamond30
-  result: MaterialDiamond
-  parent: BaseMaterialsNoDiscountRecipe
-  completetime: 2
-  materials:
-    RawScrap: 9000000 # dear god
