Plushed With Greatness (#2454)
* Adds new plushies from GhostPrince

* Requested fixes

* Small changes to descriptions

---------

Co-authored-by: Dvir <39403717+dvir001@users.noreply.github.com>

--- a/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Machines/lathe.yml
@@ -1014,6 +1014,7 @@
       - PlushieBeeRecipe
       - PlushieLizardRecipe
       - PlushieSpaceLizardRecipe
+      - NFPlushieSharkMinnowRecipe
       - PlushieVoxRecipe
       - PlushieMoffRecipe
       - PlushieMoffsicianRecipe
@@ -1092,6 +1093,9 @@
       - PlushieCatWhiteRecipe
   - type: EmagLatheRecipes
     emagStaticRecipes:
+      - NFPlushieBotanistRecipe
+      - NFPlushieCmoRecipe
+      - NFPlushieEngineerRecipe      
       - PlushieJesterRecipe
       - PlushieJanitorRecipe
       - PlushieNukeRecipe
