И ещё фикс Фронтиры

--- a/Resources/Maps/Corvax/Outpost/corvaxFrontier.yml
+++ b/Resources/Maps/Corvax/Outpost/corvaxFrontier.yml
@@ -42945,14 +42945,14 @@ entities:
     - type: Transform
       pos: 10.771485,-4.5359497
       parent: 1
-- proto: PresentRandomInsane
+- proto: PresentRandom
   entities:
   - uid: 7307
     components:
     - type: Transform
       pos: 8.602449,19.351776
       parent: 1
-- proto: PresentRandomUnsafe
+- proto: PresentRandom
   entities:
   - uid: 5083
     components:
@@ -43176,13 +43176,6 @@ entities:
     components:
     - type: Transform
       pos: 0.18185923,4.293173
-      parent: 1
-- proto: PrizeTicket60
-  entities:
-  - uid: 7505
-    components:
-    - type: Transform
-      pos: -6.6549273,9.095373
       parent: 1
 - proto: Rack
   entities:
