--- a/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
+++ b/Resources/Prototypes/Entities/Markers/Spawners/Random/posters.yml
@@ -105,6 +105,7 @@
       - NFPosterContrabandKillerFashion # Frontier
       - NFPosterContrabandGoblinFront # Frontier
       - NFPosterContrabandGoblinate # Frontier
+      - NFPosterContrabandRubiconDD # Frontier
     chance: 1
 
 - type: entity
