--- a/Resources/Prototypes/_NF/Roles/Jobs/Pirates/pirate.yml
+++ b/Resources/Prototypes/_NF/Roles/Jobs/Pirates/pirate.yml
@@ -24,7 +24,8 @@
   - !type:AddComponentSpecial
     components:
     - type: MailDisabled
-    - type: FakeSectorStationRecord
+    - type: SpecialSectorStationRecord
+      recordGeneration: FalseRecord
   - !type:AddImplantSpecial
     implants: [ FreelanceTrackingImplant ]
   - !type:GiveItemOnHolidaySpecial # Even pirates get a piece of cake.
