Fixes to play time tracker and poster upstream merge code changes.

--- a/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
+++ b/Resources/Prototypes/_NF/Entities/Structures/Wallmounts/Signs/posters.yml
@@ -174,9 +174,9 @@
 
 - type: entity
   parent: PosterBase
-  id: NFPosterContrabandRubicon
-  name: "Far Star Biotech Rubicon"
-  description: "The Far Star Biotech Rubicon Class Expeditionary Station! Here to take you on your journey to the other side, every time."
+  id: NFPosterContrabandFsbRubicon
+  name: "Far Star Biotech Rubicon Station"
+  description: "The FSB Rubicon! Guiding you through the afterlife and back into productive service!"
   components:
   - type: Sprite
     sprite: _NF/Structures/Wallmounts/posters.rsi
