Add support for bosses in VGRoid (#2449)
* Boss now die for sins

* Update mob_hostile_base.yml

* Update mob_hostile_base.yml

* Avoid changing components on terminating entities

* Update mob_hostile_base.yml

* Return to the dungeon.

---------

Co-authored-by: Whatstone <whatston3@gmail.com>

--- a/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
+++ b/Resources/Prototypes/Entities/Mobs/Player/dragon.yml
@@ -188,7 +188,7 @@
     projectileSpeed: 5
 
 - type: entity
-  parent: [NFMobRestrictions, BaseMobDragon, MobNonHumanHostileBase] # Frontier: add NFMobRestrictions, MobNonHumanHostileBase
+  parent: [NFMobRestrictions, BaseMobDragon, MobNonHumanHostileBase, NFMobBossRestrictions ] # Frontier: add NFMobRestrictions, MobNonHumanHostileBase, NFMobBossRestrictions
   id: MobDragonDungeon
   suffix: Dungeon
   components:
