--- a/Resources/Maps/_NF/POI/trademall.yml
+++ b/Resources/Maps/_NF/POI/trademall.yml
@@ -5957,22 +5957,30 @@ entities:
       rot: 3.141592653589793 rad
       pos: 17.5,3.5
       parent: 1
+    - type: Docking
+      name: Bus Dock
   - uid: 2468
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 18.5,3.5
       parent: 1
+    - type: Docking
+      name: Bus Dock
   - uid: 2469
     components:
     - type: Transform
       pos: 17.5,11.5
       parent: 1
+    - type: Docking
+      name: Bus Dock
   - uid: 2470
     components:
     - type: Transform
       pos: 18.5,11.5
       parent: 1
+    - type: Docking
+      name: Bus Dock
 - proto: AirlockFreezer
   entities:
   - uid: 5402
@@ -6261,208 +6269,280 @@ entities:
       rot: 3.141592653589793 rad
       pos: -6.5,20.5
       parent: 1
+    - type: Docking
+      name: D6
   - uid: 235
     components:
     - type: Transform
       pos: -32.5,-3.5
       parent: 1
+    - type: Docking
+      name: D5A
   - uid: 381
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -3.5,-41.5
       parent: 1
+    - type: Docking
+      name: D4C
   - uid: 796
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -4.5,20.5
       parent: 1
+    - type: Docking
+      name: D6
   - uid: 1754
     components:
     - type: Transform
       pos: -0.5,-44.5
       parent: 1
+    - type: Docking
+      name: D4B
   - uid: 1755
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 4.5,-41.5
       parent: 1
+    - type: Docking
+      name: D4A
   - uid: 1756
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 4.5,-39.5
       parent: 1
+    - type: Docking
+      name: D4A
   - uid: 1789
     components:
     - type: Transform
       pos: 1.5,-44.5
       parent: 1
+    - type: Docking
+      name: D4B
   - uid: 1790
     components:
     - type: Transform
       pos: 0.5,-44.5
       parent: 1
+    - type: Docking
+      name: D4B
   - uid: 1831
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -3.5,-40.5
       parent: 1
+    - type: Docking
+      name: D4C
   - uid: 1832
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -3.5,-39.5
       parent: 1
+    - type: Docking
+      name: D4C
   - uid: 2366
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 4.5,-40.5
       parent: 1
+    - type: Docking
+      name: D4A
   - uid: 2375
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -36.5,0.5
       parent: 1
+    - type: Docking
+      name: D5B
   - uid: 2376
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -36.5,-0.5
       parent: 1
+    - type: Docking
+      name: D5B
   - uid: 2377
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -36.5,1.5
       parent: 1
+    - type: Docking
+      name: D5B
   - uid: 2378
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -32.5,4.5
       parent: 1
+    - type: Docking
+      name: D5C
   - uid: 2379
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -31.5,4.5
       parent: 1
+    - type: Docking
+      name: D5C
   - uid: 2380
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -33.5,4.5
       parent: 1
+    - type: Docking
+      name: D5C
   - uid: 2408
     components:
     - type: Transform
       pos: -33.5,-3.5
       parent: 1
+    - type: Docking
+      name: D5A
   - uid: 2409
     components:
     - type: Transform
       pos: -31.5,-3.5
       parent: 1
+    - type: Docking
+      name: D5A
   - uid: 2493
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -3.5,42.5
       parent: 1
+    - type: Docking
+      name: D7A
   - uid: 2494
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -3.5,41.5
       parent: 1
+    - type: Docking
+      name: D7A
   - uid: 2495
     components:
     - type: Transform
       rot: -1.5707963267948966 rad
       pos: -3.5,40.5
       parent: 1
+    - type: Docking
+      name: D7A
   - uid: 2496
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 4.5,42.5
       parent: 1
+    - type: Docking
+      name: D7C
   - uid: 2501
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 4.5,41.5
       parent: 1
+    - type: Docking
+      name: D7C
   - uid: 2503
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 4.5,40.5
       parent: 1
+    - type: Docking
+      name: D7C
   - uid: 2504
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: -0.5,45.5
       parent: 1
+    - type: Docking
+      name: D7B
   - uid: 2506
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 1.5,45.5
       parent: 1
+    - type: Docking
+      name: D7B
   - uid: 2543
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 28.5,15.5
       parent: 1
+    - type: Docking
+      name: Guard
   - uid: 2842
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 68.5,1.5
       parent: 1
+    - type: Docking
+      name: CB2
   - uid: 2843
     components:
     - type: Transform
       rot: 1.5707963267948966 rad
       pos: 68.5,-0.5
       parent: 1
+    - type: Docking
+      name: CB2
   - uid: 2844
     components:
     - type: Transform
       pos: 51.5,-17.5
       parent: 1
+    - type: Docking
+      name: CB3
   - uid: 2845
     components:
     - type: Transform
       pos: 49.5,-17.5
       parent: 1
+    - type: Docking
+      name: CB3
   - uid: 2846
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 49.5,18.5
       parent: 1
+    - type: Docking
+      name: CB1
   - uid: 2847
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 51.5,18.5
       parent: 1
+    - type: Docking
+      name: CB1
   - uid: 2852
     components:
     - type: Transform
       rot: 3.141592653589793 rad
       pos: 0.5,45.5
       parent: 1
+    - type: Docking
+      name: D7B
 - proto: AirlockGlassShuttleNfsdLocked
   entities:
   - uid: 2544
@@ -6470,16 +6550,22 @@ entities:
     - type: Transform
       pos: 29.5,-14.5
       parent: 1
+    - type: Docking
+      name: NFSD
   - uid: 2545
     components:
     - type: Transform
       pos: 28.5,-14.5
       parent: 1
+    - type: Docking
+      name: NFSD
   - uid: 2546
     components:
     - type: Transform
       pos: 27.5,-14.5
       parent: 1
+    - type: Docking
+      name: NFSD
 - proto: AirlockHatchMaintenance
   entities:
   - uid: 2855
