Localized dock names

--- a/Resources/Maps/_NF/POI/nfsd.yml
+++ b/Resources/Maps/_NF/POI/nfsd.yml
@@ -2404,7 +2404,7 @@ entities:
       pos: 20.5,28.5
       parent: 1
     - type: Docking
-      name: Jani
+      name: dock-label-janitor
   - uid: 235
     components:
     - type: Transform
@@ -2412,7 +2412,7 @@ entities:
       pos: 18.5,28.5
       parent: 1
     - type: Docking
-      name: Jani
+      name: dock-label-janitor
   - uid: 2130
     components:
     - type: Transform
@@ -2420,7 +2420,7 @@ entities:
       pos: 19.5,28.5
       parent: 1
     - type: Docking
-      name: Jani
+      name: dock-label-janitor
 - proto: AirSensor
   entities:
   - uid: 1360
