--- a/Resources/Maps/_NF/POI/trade.yml
+++ b/Resources/Maps/_NF/POI/trade.yml
@@ -3454,7 +3454,7 @@ entities:
       pos: 55.5,29.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 222
     components:
     - type: Transform
@@ -3462,7 +3462,7 @@ entities:
       pos: 56.5,29.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 223
     components:
     - type: Transform
@@ -3470,7 +3470,7 @@ entities:
       pos: 57.5,29.5
       parent: 1
     - type: Docking
-      name: CB1
+      name: dock-label-trade-cargo-bay-one
   - uid: 809
     components:
     - type: Transform
@@ -3478,7 +3478,7 @@ entities:
       pos: 88.5,0.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 810
     components:
     - type: Transform
@@ -3486,7 +3486,7 @@ entities:
       pos: 88.5,-0.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 811
     components:
     - type: Transform
@@ -3494,49 +3494,49 @@ entities:
       pos: 88.5,-1.5
       parent: 1
     - type: Docking
-      name: CB2
+      name: dock-label-trade-cargo-bay-two
   - uid: 1006
     components:
     - type: Transform
       pos: 74.5,-22.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 1014
     components:
     - type: Transform
       pos: 75.5,-22.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 1015
     components:
     - type: Transform
       pos: 76.5,-22.5
       parent: 1
     - type: Docking
-      name: D6
+      name: dock-label-trade-six
   - uid: 3695
     components:
     - type: Transform
       pos: 13.5,-25.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 3696
     components:
     - type: Transform
       pos: 14.5,-25.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 3697
     components:
     - type: Transform
       pos: 15.5,-25.5
       parent: 1
     - type: Docking
-      name: CB3
+      name: dock-label-trade-cargo-bay-three
   - uid: 3698
     components:
     - type: Transform
@@ -3544,7 +3544,7 @@ entities:
       pos: -15.5,25.5
       parent: 1
     - type: Docking
-      name: D5
+      name: dock-label-trade-five
   - uid: 3699
     components:
     - type: Transform
@@ -3552,7 +3552,7 @@ entities:
       pos: -14.5,25.5
       parent: 1
     - type: Docking
-      name: D5
+      name: dock-label-trade-five
   - uid: 3700
     components:
     - type: Transform
@@ -3560,7 +3560,7 @@ entities:
       pos: -13.5,25.5
       parent: 1
     - type: Docking
-      name: D5
+      name: dock-label-trade-five
   - uid: 3701
     components:
     - type: Transform
@@ -3568,7 +3568,7 @@ entities:
       pos: -31.5,3.5
       parent: 1
     - type: Docking
-      name: CB4
+      name: dock-label-trade-cargo-bay-four
   - uid: 3702
     components:
     - type: Transform
@@ -3576,7 +3576,7 @@ entities:
       pos: -31.5,2.5
       parent: 1
     - type: Docking
-      name: CB4
+      name: dock-label-trade-cargo-bay-four
   - uid: 3703
     components:
     - type: Transform
@@ -3584,14 +3584,14 @@ entities:
       pos: -31.5,1.5
       parent: 1
     - type: Docking
-      name: CB4
+      name: dock-label-trade-cargo-bay-four
   - uid: 3704
     components:
     - type: Transform
       pos: -3.5,-15.5
       parent: 1
     - type: Docking
-      name: D7
+      name: dock-label-trade-seven
     - type: PriorityDock
       tag: DockTransit
   - uid: 3705
@@ -3600,7 +3600,7 @@ entities:
       pos: -2.5,-15.5
       parent: 1
     - type: Docking
-      name: D7
+      name: dock-label-trade-seven
     - type: PriorityDock
       tag: DockTransit
 - proto: AirlockMaint
