Update trade mall prototype defn to use new fields

--- a/Resources/Prototypes/_NF/PointsOfInterest/trade.yml
+++ b/Resources/Prototypes/_NF/PointsOfInterest/trade.yml
@@ -1,5 +1,5 @@
 # Author Info
-# GitHub:
+# GitHub: MagnusCrowe
 # Discord: MagnusCrowe
 
 # Maintainer Info
@@ -25,7 +25,7 @@
   - type: StationTransit
   - type: ProtectedGrid
     preventArtifactTriggers: true
-  
+
 - type: gameMap
   id: Trade
   mapName: 'Trade Outpost'
