--- a/Resources/Prototypes/_NF/Shipyard/Nfsd/paladin.yml
+++ b/Resources/Prototypes/_NF/Shipyard/Nfsd/paladin.yml
@@ -13,7 +13,7 @@
 
 - type: gameMap
   id: Paladin
-  mapName: 'NSF Templar'
+  mapName: 'NSF Paladin'
   mapPath: /Maps/_NF/Shuttles/Nfsd/paladin.yml
   minPlayers: 0
   stations:
